<resources>
    <string name="app_name">Davidhood</string>
    <string name="french">Français</string>
    <string name="deutsch">Deutsch</string>
    <string name="welcome">Welcome !</string>
    <string name="welcome_description">Try Davidhood, you can get more knowledge than ever.</string>
    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="email">Email</string>
    <string name="new_email">New email</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="update">Update</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="iban">IBAN</string>
    <string name="almost_done">Hi, Alex. You are almost done!</string>
    <string name="almost_done_description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</string>
    <string name="i_agree">I read and agree with the conditions.</string>
    <string name="home">Home</string>
    <string name="home_top">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="settings">Settings</string>
    <string name="profile_update_message">If you want to update email and password, click </string>
    <string name="here">Here!</string>
    <string name="general_condition">General Condition</string>
    <string name="about_us">About Us</string>
    <string name="ask_questions">Ask Questions</string>
    <string name="publish_advertisement">Publish Advertisement</string>
    <string name="logout">logout</string>
    <string name="general_condition_detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="about_us_detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="subject">Subject</string>
    <string name="message">Message (Max: 1024 chars)</string>
    <string name="submit">Submit</string>
    <string name="ask_transfer">Ask Transfer</string>
    <string name="request_description">The payment can be requested only from 20 CHF</string>

    <string name="finish_app_message">Do you want to close app?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="fill_message">Please fill in all fields</string>
    <string name="invalid_email_message">Invalid email address</string>
    <string name="not_match_password_message">Password does not match</string>
    <string name="server_connection_error_message">Server connection error</string>
    <string name="email_password_wrong_message">Email or password is not wrong</string>
    <string name="email_already_exists_message">Email already exists</string>
    <string name="agree_condition_message">You should agree with the conditions</string>
    <string name="signup_success_message">You have signed up successfully</string>
    <string name="invalid_user_message">Invalid User</string>
    <string name="transfer_already_asked_message">You have already asked transfer</string>
    <string name="profile_update_success_message">Profile has been updated successfully</string>
    <string name="choose_option_message">Please choose option to update</string>
    <string name="for_more_info">For more information, please click here!</string>
    <string name="back_home">Back to home page</string>
    <string name="wrong_answer_message">Your answer is wrong, please review the video again!</string>
    <string name="right_answer_message">Your answer is right. You gained!</string>
    <string name="once_video_message">You can watch this video again after 24hrs.</string>
    <string name="email_error_message">Could not send your question successfully!</string>
    <string name="email_success_message">Your question has been sent successfully!</string>
    <string name="invalid_url_message">Invalid URL</string>
</resources>
