<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@color/colorPrimary"
    >

    <ImageView
        android:id="@+id/img_title"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/title" />
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/logo_white"
        android:layout_below="@+id/img_title"
        />
    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:layout_below="@+id/img_logo"
        android:layout_centerHorizontal="true"
        android:textSize="22dp"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="15dp"
        android:text="@string/welcome_description"
        android:layout_below="@+id/txt_welcome"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        >
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <Button
                android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/signup"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>