<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup3Activity"
    android:background="@color/colorPrimary"
    >
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/arrow_back"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        android:textSize="22dp"
        android:layout_below="@+id/btn_back"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:src="@drawable/logo_white"
        android:layout_below="@+id/txt_signup"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:id="@+id/txt_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/almost_done"
        android:textColor="@android:color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        android:layout_below="@+id/img_logo"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        />
    <TextView
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:id="@+id/txt_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/almost_done_description"
        android:textColor="@android:color/white"
        android:textSize="16dp"
        android:layout_below="@+id/txt_title"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_next"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            >
            <ImageButton
                android:id="@+id/btn_check"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/unchecked_white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/i_agree"
                android:layout_marginLeft="10dp"
                android:textSize="16dp"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
    </RelativeLayout>
    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/arrow_next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        />
</RelativeLayout>