<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/btn_ask"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/ask_transfer"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:id="@+id/txt_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_ask"
            android:text="@string/request_description"
            android:textAlignment="center"
            android:textSize="13dp"
            android:layout_marginTop="10dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/txt_request"
            android:orientation="vertical"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            >
            <LinearLayout
                android:id="@+id/ly_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                >
                <TextView
                    android:id="@+id/txt_already_asked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:text="@string/transfer_already_asked_message"
                    android:textColor="@color/colorPrimary"
                    android:layout_gravity="center_vertical"
                    />
                <ImageButton
                    android:id="@+id/btn_refresh"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/refresh"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    />
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/txt_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:textSize="15dp"
                    android:textAlignment="textEnd"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/edit_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp"
                    android:layout_toRightOf="@+id/txt_first_name"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:text="@string/first_name"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_toRightOf="@+id/txt_first_name"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="10dp"
                    ></RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/txt_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:textSize="15dp"
                    android:textAlignment="textEnd"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/edit_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp"
                    android:layout_toRightOf="@+id/txt_last_name"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:text="@string/last_name"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_toRightOf="@+id/txt_last_name"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="10dp"
                    ></RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="15dp"
                    android:textAlignment="textEnd"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp"
                    android:layout_toRightOf="@+id/txt_email"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:text="email@example.com"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_toRightOf="@+id/txt_email"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="10dp"
                    ></RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/txt_birth_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/birth_date"
                    android:textSize="15dp"
                    android:textAlignment="textEnd"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/edit_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp"
                    android:layout_toRightOf="@+id/txt_birth_date"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:text="01/01/1991"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_toRightOf="@+id/txt_birth_date"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="10dp"
                    ></RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/txt_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textSize="15dp"
                    android:textAlignment="textEnd"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/edit_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp"
                    android:layout_toRightOf="@+id/txt_address"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:text="@string/address"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_toRightOf="@+id/txt_address"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="10dp"
                    ></RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/txt_postal_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/postal_code"
                    android:textSize="15dp"
                    android:textAlignment="textEnd"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/edit_postal_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp"
                    android:layout_toRightOf="@+id/txt_postal_code"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:text="651245"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_toRightOf="@+id/txt_postal_code"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="10dp"
                    ></RelativeLayout>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:id="@+id/txt_iban"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iban"
                    android:textSize="15dp"
                    android:textAlignment="textEnd"
                    android:layout_centerVertical="true"
                    />
                <TextView
                    android:id="@+id/edit_iban"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp"
                    android:layout_toRightOf="@+id/txt_iban"
                    android:layout_centerVertical="true"
                    android:background="@android:color/transparent"
                    android:singleLine="true"
                    android:textColor="@android:color/black"
                    android:text="CH-09893"
                    />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_toRightOf="@+id/txt_iban"
                    android:layout_alignParentBottom="true"
                    android:background="@android:color/darker_gray"
                    android:layout_marginLeft="10dp"
                    ></RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:layout_marginBottom="20dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_update_message"
                android:textAlignment="center"
                android:textSize="15dp"
                />
            <Button
                android:id="@+id/btn_here"
                android:layout_width="80dp"
                android:layout_height="25dp"
                android:text="@string/here"
                android:textSize="16dp"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>