<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup2Activity"
    android:background="@color/colorPrimary"
    >
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:background="@drawable/arrow_back"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        />
    <TextView
        android:id="@+id/txt_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@android:color/white"
        android:textSize="22dp"
        android:layout_below="@+id/btn_back"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        />
    <RelativeLayout
        android:id="@+id/ly_address"
        android:layout_below="@+id/txt_signup"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textSize="15dp"
            android:textColor="@android:color/white"
            />
        <EditText
            android:id="@+id/edit_address"
            android:layout_below="@+id/txt_address"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:textSize="17dp"
            android:textColor="@android:color/white"
            android:inputType="text"
            android:text="test address"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_alignParentBottom="true"
            ></RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/ly_postal_code"
        android:layout_below="@+id/ly_address"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:id="@+id/txt_postal_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/postal_code"
            android:textSize="15dp"
            android:textColor="@android:color/white"
            />
        <EditText
            android:id="@+id/edit_postal_code"
            android:layout_below="@+id/txt_postal_code"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:singleLine="true"
            android:inputType="number"
            android:maxLength="4"
            android:textSize="17dp"
            android:textColor="@android:color/white"
            android:text="1234"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_alignParentBottom="true"
            ></RelativeLayout>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/ly_iban"
        android:layout_below="@+id/ly_postal_code"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <TextView
            android:id="@+id/txt_iban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iban"
            android:textSize="15dp"
            android:textColor="@android:color/white"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_iban"
            android:layout_marginTop="5dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CH"
                android:layout_gravity="center_vertical"
                android:textColor="@android:color/white"
                />
            <EditText
                android:id="@+id/edit_iban"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:background="@android:color/transparent"
                android:singleLine="true"
                android:inputType="text"
                android:text="1234"
                android:textSize="17dp"
                android:textColor="@android:color/white"
                />
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"
            android:layout_alignParentBottom="true"
            ></RelativeLayout>
    </RelativeLayout>
    <ImageButton
        android:id="@+id/btn_next"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/arrow_next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        />
</RelativeLayout>